bug 405483: explicitly sync devicecontext scale to prescontext scale upon prescontext initialization, fixing bug where web pages would either be too small (with scrollbars in the middle of the viewport) or too big (with scrollbars offscreen) when loaded if the previous page loaded in that tab had a non-default full zoom value; r+sr=roc